--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- Start Header -->
   <div class="header">
     <div class="container">
-      <img class="logo" src="/images/logo.png" alt="logo">
+      <img class="logo" src="images/logo.png"  alt="logo">
       <div  class="links">
         <ul>
           <li><a href="#services">Servicec</a></li>
